refactor: tweak default configurations

--- a/scripts/config/sample_with_env_var.gitlab-ci.yml
+++ b/scripts/config/sample_with_env_var.gitlab-ci.yml
@@ -1,17 +1,20 @@
 welcome:
   stage: build
+  image: ubuntu:latest
   script:
     - echo "Hello, $GITLAB_USER_LOGIN!"
 
 check:
   stage: test
-  script:
-    - apt-get -y update
-    - echo "Fetching feedback scripts ..."
+  image: ubuntu:latest
+  before_script:
+    - apt-get update
     - apt-get install -y git
-    - git clone https://${CI_FEEDBACK_REPO_USER}:${CI_FEEDBACK_REPO_TOKEN}@${GITLAB_HOST}/${COURSE_NAME}/assessment/a0_autofeedback
+  script:
+    - echo "Fetching feedback scripts ..."
+    - git clone https://${CI_FEEDBACK_REPO_USER}:${CI_FEEDBACK_REPO_TOKEN}@git.uwaterloo.ca/ece100/root/a0/assessment
     - echo "Setting up runtime environment ..."
     - echo "Generating feedback ..."
-    - echo "The content under a0_autofeedback are:"
-    - ls a0_autofeedback/
+    - echo "The files under assessment/ are:"
+    - ls assessment/
     - echo "Done"
